20110408
	appl/lib/json.b - have writeval produce same (correct) form as .text for Real [issue 230]
20110407
	fix embarrassingly broken Lists->delete; add Lists->find [issue 257]
	add some extra explanation to sys-dup(2) about fildes
20110404
	update Nt/386/bin
	/limbo/com.c - count constants in qualifiers, not qualifiers [issue 212, mechiel]
	/appl/cmd/limbo/com.b [also issue 212]
20110403
	secstore(2) and secstore(1) updated to implement writing [issue 256, mechiel]
20110402
	revision to devsrv.c change [issue 244] to avoid two calls to delwaiting
20110330
	call strtol not atoi for hex numbers [issue 255, mechiel]
20110329
	utils/mkdir/mkdir.c - add -p option [mechiel, issue 250]
	emu/Linux/mkfile - try searching -lpthread after -lrt for sem_* [issue 247]
	emu/port/devfs-posix.c - treat unix domain sockets as files (open/read/write/close) [npe, rsc, issue 254]
	emu/port/devfs-posix.c - use volatile correctly; slight code tidy
	emu/lib9/errstr-posix.c replace EINTR's error string by Eintr's text
20110315
	libtk/textw.c - fix mysterious control characters for editing (D and K) [issue 253, fix from mechiel]
20110225
	split emu.h from lib9.h for all platforms
	kproc in emu is now a void type as in os
20110224
	move private mem flag to Progs [issue 240, mechiel]
20110224
20110208
	emu/Linux/os.c - use -lrt's semaphores instead of signals
	emu/Linux/mkfile - add -lrt to library list, and push out separation of X11LIBS from SYSLIBS for emu-g done ages ago
20110126
	emu/MacOSX/os.c - move a free to a more sensible place
20110117
	emu/Nt/ipif.c changed to work with ipv6 interface changes
20110116
	add Plan9/arm support [provided by richard miller]
20110110	
	utils/libmach/qdb.c [issue 245] restore renaming of qdiv as qmuldiv
20110104
	emu/MacOSX/win.c detect double clicks [issue 232, jas]
	emu/MacOSX/os.c replace erendezvous by a per-kproc semaphore for osblock/osready
20101220